add PkHd reader + test program

--- a/FEngLib/FEngLib.csproj
+++ b/FEngLib/FEngLib.csproj
@@ -5,4 +5,8 @@
     <Platforms>x86</Platforms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NFSTools.Core.IO" Version="1.0.3" />
+  </ItemGroup>
+
 </Project>
