--- a/FEngCli/FEngCli.csproj
+++ b/FEngCli/FEngCli.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Platforms>x86</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
