rendering or something lol this project is cursed

--- a/FEngLib/FEngLib.csproj
+++ b/FEngLib/FEngLib.csproj
@@ -2,12 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <Platforms>x86</Platforms>
+    <Platforms>x86;AnyCPU</Platforms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NFSTools.Core.IO" Version="1.0.3" />
-  </ItemGroup>
-
 </Project>
