--- a/FEngCli/FEngCli.csproj
+++ b/FEngCli/FEngCli.csproj
@@ -3,13 +3,14 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Platforms>x86</Platforms>
+        <Platforms>x86;AnyCPU</Platforms>
+        <Configurations>Debug;Release</Configurations>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
       <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
-      <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0008"/>
+        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0008"/>
     </ItemGroup>
 
     <ItemGroup>
