--- a/FEngTestBench/FEngTestBench.csproj
+++ b/FEngTestBench/FEngTestBench.csproj
@@ -3,7 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Platforms>x86</Platforms>
+        <Platforms>x86;AnyCPU</Platforms>
+        <Configurations>Debug;Release</Configurations>
     </PropertyGroup>
 
     <ItemGroup>
