--- a/FEngViewer/FEngViewer.csproj
+++ b/FEngViewer/FEngViewer.csproj
@@ -12,14 +12,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FEngLib\FEngLib.csproj" />
-    <ProjectReference Include="..\FEngRender\FEngRender.csproj" />
+    <ProjectReference Include="..\FEngLib\FEngLib.csproj"/>
+    <ProjectReference Include="..\FEngRender\FEngRender.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="ObjectDetailsView.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
