--- a/FEngViewer/FEngViewer.csproj
+++ b/FEngViewer/FEngViewer.csproj
@@ -12,13 +12,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FEngLib\FEngLib.csproj"/>
-    <ProjectReference Include="..\FEngRender\FEngRender.csproj"/>
+    <ProjectReference Include="..\FEngLib\FEngLib.csproj" />
+    <ProjectReference Include="..\FEngRender\FEngRender.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="ObjectDetailsView.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Update="PackageView.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PackageView.resx</DependentUpon>
     </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -28,6 +33,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="PackageView.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>PackageView.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
