--- a/FEngViewer/FEngViewer.csproj
+++ b/FEngViewer/FEngViewer.csproj
@@ -9,11 +9,13 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+    <PackageReference Include="OpenTK" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FEngLib\FEngLib.csproj" />
     <ProjectReference Include="..\FEngRender\FEngRender.csproj" />
+    <ProjectReference Include="..\OpenTK.GLControl\OpenTK.WinForms\OpenTK.WinForms.csproj" />
   </ItemGroup>
 
   <ItemGroup>
