--- a/FEngViewer/FEngViewer.csproj
+++ b/FEngViewer/FEngViewer.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FEngLib\FEngLib.csproj" />
+    <ProjectReference Include="..\FEngRender.OpenGL\FEngRender.OpenGL.csproj" />
     <ProjectReference Include="..\FEngRender\FEngRender.csproj" />
     <ProjectReference Include="..\OpenTK.GLControl\OpenTK.WinForms\OpenTK.WinForms.csproj" />
   </ItemGroup>
