--- a/FEngViewer/FEngViewer.csproj
+++ b/FEngViewer/FEngViewer.csproj
@@ -9,14 +9,15 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
-    <PackageReference Include="OpenTK" Version="4.4.0" />
+    <PackageReference Include="SharpGL" Version="3.1.1" />
+    <PackageReference Include="SharpGL.SceneGraph" Version="3.1.1" />
+    <PackageReference Include="SharpGL.WinForms" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FEngLib\FEngLib.csproj" />
     <ProjectReference Include="..\FEngRender.OpenGL\FEngRender.OpenGL.csproj" />
     <ProjectReference Include="..\FEngRender\FEngRender.csproj" />
-    <ProjectReference Include="..\OpenTK.GLControl\OpenTK.WinForms\OpenTK.WinForms.csproj" />
   </ItemGroup>
 
   <ItemGroup>
