--- a/FEngRender.GL/FEngRender.GL.csproj
+++ b/FEngRender.GL/FEngRender.GL.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <AssemblyName>FEngRender.OpenGL</AssemblyName>
-        <RootNamespace>FEngRender.OpenGL</RootNamespace>
+        <RootNamespace>FEngRender.GL</RootNamespace>
+        <PackageId>FEngRender.GL</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,7 +30,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="OpenTK" Version="4.4.0" />
+      <PackageReference Include="GlmNet" Version="0.7.0" />
+      <PackageReference Include="OpenTK.Mathematics" Version="4.4.0" />
+      <PackageReference Include="SharpGL" Version="3.1.1" />
+      <PackageReference Include="SharpGL.SceneGraph" Version="3.1.1" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
 
