Actually add Packages folder...

--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,5 @@ ASALocalRun/
 healthchecksdb
 /FEngViewer/Properties/launchSettings.json
 /FEngCli/Properties/launchSettings.json
+
+!FEngLib/Packages
