move methods from ColorHelpers to Color4 structure

--- a/.gitignore
+++ b/.gitignore
@@ -341,4 +341,4 @@ healthchecksdb
 /FEngViewer/Properties/launchSettings.json
 /FEngCli/Properties/launchSettings.json
 
-!FEngLib/Packages
+!FEngLib/Packages/*
