FEngRender.GL: string rendering!
issues:
- outlines only, filling will be hard - atlas based approach (game like) will be easier tbh
- still some alignment/positioning issues
- color is ignored???
- some text doesn't draw at all (UI_DebugTest.fng, the "Layer" text)

--- a/FEngRender.GL/FEngRender.GL.csproj
+++ b/FEngRender.GL/FEngRender.GL.csproj
@@ -32,6 +32,7 @@
     <ItemGroup>
       <PackageReference Include="SharpGL" Version="3.1.1" />
       <PackageReference Include="SharpGL.SceneGraph" Version="3.1.1" />
+      <PackageReference Include="SixLabors.Fonts" Version="1.0.0-beta0013" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
 
