--- a/FEngTestBench/FEngTestBench.csproj
+++ b/FEngTestBench/FEngTestBench.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Platforms>x86;AnyCPU</Platforms>
+        <TargetFramework>net6.0</TargetFramework>
+        <Platforms>AnyCPU</Platforms>
         <Configurations>Debug;Release</Configurations>
     </PropertyGroup>
 
