--- a/FEngCli/FEngCli.csproj
+++ b/FEngCli/FEngCli.csproj
@@ -3,20 +3,20 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <Platforms>AnyCPU</Platforms>
-        <Configurations>Debug;Release</Configurations>
+        <Authors>heyitsleo;Fridtjof</Authors>
+        <Company>NFSTools</Company>
+        <Description>CLI for de/recompiling FNG binary chunks</Description>
+        <Version>0.2.0-alpha</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CommandLineParser" Version="2.8.0" />
-      <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta11" />
+        <PackageReference Include="CommandLineParser" Version="2.8.0"/>
+        <PackageReference Include="JetBrains.Annotations" Version="2020.1.0"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\FEngLib\FEngLib.csproj" />
-      <ProjectReference Include="..\FEngRender\FEngRender.csproj" />
+        <ProjectReference Include="..\FEngLib\FEngLib.csproj"/>
     </ItemGroup>
 
 </Project>
