--- a/FEngViewer/FEngViewer.csproj
+++ b/FEngViewer/FEngViewer.csproj
@@ -4,6 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Authors>heyitsleo;Fridtjof</Authors>
+    <Company>NFSTools</Company>
+    <Description>GUI for previewing and editing FNGs</Description>
+    <Version>2.0.0-alpha</Version>
   </PropertyGroup>
 
   <ItemGroup>
